# stokes-treecode

./: .gitattributes  3D_RegStokes_case_1.cpp  3D_RegStokes_case_2.cpp  3D_SingStokes_Taylor_case_2.cpp  BLTC_MRS.cpp  BLTC_MRS_data.txt  CMakeLists.txt  KITC_MRS.cpp  KITC_MRS_Combine_Data.cpp  Makefile  Makefile_SLDM_BLTC  Makefile_SingStokes_RegStokes  README.md  TTC_SingStokes_case_1.cpp  code_SLDM_BLTC.cpp  config.h.in
data/: Points_N1310720  Points_N327680  Points_N81920  lambda_1000000.txt  lambda_400000.txt  lambda_sto_1310720.txt  lambda_sto_20480.txt  lambda_sto_81920.txt  lambda_str_20480.txt  rand_1000000.txt  rand_125000.txt  rand_400000.txt
data_Taylor_treecode/: Points_N20480  lambda_125000.txt  lambda_sto_327680.txt  lambda_str_1310720.txt  lambda_str_327680.txt  lambda_str_81920.txt
